2006-11-30  Richard Levitte  <richard@levitte.org>

	* cmd_ws_commit.cc (CMD_NO_WORKSPACE(import)): Add import command.
	It's quite simplistic, it basically creates a _MTN bookkeeping
	directory filled with information derived from a given branch or
	revision, then does the following:
		mtn add --unknown
		mtn drop --missing
		mtn commit
	It will refuse to import from a workspace.
	* po/sv.po: Adjust for the added and changed strings.
	* tests/import/__driver__.lua, testsuite.lua: Test it.
	* monotone.texi: Document it.

2006-11-28  Christian Ohler <ohler+mtn@fastmail.net>

	Fix automate bug where input would be garbled if a string needed
	multiple read() calls. (patch from ML; applied by Timothy Brownawell)

2006-11-28  Matt Johnston  <matt@ucc.asn.au>

	* restrictions.cc: limit some verbose debugging that slows "log <file>"

2006-11-22  Patrick Mauritz  <oxygene@studentenbude.ath.cx>

	* rev_height.cc: add memcmp to global namespace for sunpro.

2006-11-20  Matt Johnston  <matt@ucc.asn.au>

	* tests/mtn_execute_attr_respects_umask/: use ls -l rather than
	stat -c, since the former is posix defined.

2006-11-20  Thomas Keller  <me@thomaskeller.biz>

       * moved automate get_file into cmd_files.cc
       * new automate command get_file_of which is basically mtn cat
       * replaced exception by user error for get_file and get_file_of
       if no arguments are given 

2006-11-18  Richard Levitte  <richard@levitte.org>

	* debian/monotone-server.monotone.init (d_start): Remove the
	branch argument, which was all-inklusive anyway.
	* debian/changelog: Mark a new version to make it possible to
	write a ...
	* debian/NEWS: New news item indicating to Debian users that
	they may need to do some changes if they want their servers
	to still run.

2006-11-18  Timtohy Brownawell  <tbrownaw@gmail.com>

	Make 'serve' always serve everything, and no longer take
	include/exclude patterns on the command line.

	Make the testsuite not use --nostd, so it can use the standard